# MendCode

./: .env.example  .gitignore  MendCode_TUI产品基调与交互方案.md  MendCode_全局路线图.md  MendCode_开发方案.md  MendCode_问题记录.md  README.md  pyproject.toml  rawplan.md  requirements.txt
app/: __init__.py
app/agent/: loop.py  openai_compatible.py  permission.py  prompt_context.py  provider.py  provider_factory.py  session.py
app/api/: server.py
app/cli/: main.py
app/config/: settings.py
app/core/: paths.py
app/orchestrator/: failure_parser.py  fixed_flow.py  runner.py
app/schemas/: __init__.py  agent_action.py  run_state.py  task.py  trace.py  verification.py
app/tools/: __init__.py  arguments.py  guard.py  patch.py  read_only.py  registry.py  schemas.py  structured.py
app/tui/: app.py  intent.py  state.py
app/workspace/: __init__.py  command_policy.py  executor.py  review_actions.py  shell_executor.py  shell_policy.py  worktree.py
data/conversations/: 2026-04-26_161537-d6c63f809cfd.jsonl  2026-04-26_161537-d6c63f809cfd.md  2026-04-26_161741-d5c74932dd2e.jsonl  2026-04-26_161741-d5c74932dd2e.md
data/tasks/: demo.json
tests/integration/: test_api.py  test_cli.py
tests/unit/: test_agent_action_schema.py  test_agent_loop.py  test_agent_provider.py  test_agent_session.py  test_app_metadata.py  test_command_policy.py  test_executor.py  test_failure_parser.py  test_openai_compatible_provider.py  test_patch_tools.py  test_prompt_context.py  test_provider_factory.py  test_read_only_tools.py  test_repo_hygiene.py  test_review_actions.py  test_run_state.py  test_runner.py  (+12 more)
(+18 files in other folders)
