[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mendcode"
description = "A maintenance agent for enterprise local repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12,<2.13",
  "python-dotenv==1.2.2",
  "typer==0.24.1",
  "rich==15.0.0",
  "httpx>=0.28,<0.29",
  "orjson==3.11.8",
  "Jinja2==3.1.6",
  "GitPython==3.1.46",
  "tree-sitter==0.25.2",
  "tree-sitter-language-pack==1.6.2",
  "openai==2.32.0",
  "watchfiles==1.1.1",
]

dynamic = ["version"]

[project.scripts]
mendcode = "app.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
